# memaw

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
cmake/: GitVersion.cmake  memawConfig.cmake
doc/: index.md
include/memaw/: cache_resource.hpp  chain_resource.hpp  concepts.hpp  literals.hpp  os_resource.hpp  pages_resource.hpp  pool_resource.hpp  resource_traits.hpp
include/memaw/__detail/: base.hpp  cache_resource_impl.hpp  chain_resource_impl.hpp  concepts_impl.hpp  environment.hpp  mem_ref.hpp  os_info.hpp  os_mapper.hpp  pool_resource_impl.hpp  resource_common.hpp  resource_traits_impl.hpp  stack.hpp
test/: CMakeLists.txt  cache_resource_tests.cpp  chain_resource_tests.cpp  concepts_tests.cpp  memaw_tests.cpp  os_resource_tests.cpp  pages_resource_tests.cpp  pool_resource_tests.cpp  resource_common_tests.cpp  resource_test_base.cpp  resource_test_base.hpp  resource_tests.cpp  test_resource.hpp
